--- a/Crawly-Web/src/main/resources/static/css/main.css
+++ b/Crawly-Web/src/main/resources/static/css/main.css
@@ -20,8 +20,7 @@ header {
     height: 50px;
     background: #333;
     color: #fff;
-    
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     z-index: 100;
